# IntervalMap

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: interval_map.hpp
test/: CMakeLists.txt  IntervalMap_test.cpp
